<resources>
    <string name="app_name">ShiftSix</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="home">home</string>
    <string name="calendar">calendar</string>
    <string name="settings">settings</string>
    <string name="add_button">Add Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_name" />
    <string name="card_date" />
    <string name="date" />
    <string name="name" />
    <string name="description" />
    <string name="remind_me_about_this">Remind me about this?</string>
    <string name="card_time" />
    <string name="add_an_event">Add an Event</string>
    <string name="event_description">Event Description</string>
    <string name="submit">Submit</string>
    <string name="event_time">Event Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">Event Name</string>
    <string name="delete">delete</string>
    <string name="expenses">expenses</string>
    <string name="expense_menu_visibility">Expense Menu Visibility</string>
    <string name="calendar_menu_visibility">Calendar Menu Visibility</string>
    <string name="shopping_list">Shopping List</string>
    <string name="expense_fragment">Expense Fragment</string>
    <string name="remind_me">Remind me?</string>
</resources>